--- a/.eslintrc
+++ b/.eslintrc
@@ -92,10 +92,7 @@
     ],
     "@typescript-eslint/require-await": "error",
     "@typescript-eslint/restrict-plus-operands": "error",
-    "@typescript-eslint/semi": [
-      "error",
-      "always"
-    ],
+    "@typescript-eslint/semi": ["error", "always"],
     "@typescript-eslint/strict-boolean-expressions": "off",
     "@typescript-eslint/triple-slash-reference": [
       "error",
@@ -108,14 +105,8 @@
     "@typescript-eslint/type-annotation-spacing": "off",
     "@typescript-eslint/unified-signatures": "error",
     "arrow-body-style": "error",
-    "arrow-parens": [
-      "off",
-      "always"
-    ],
-    "brace-style": [
-      "error",
-      "1tbs"
-    ],
+    "arrow-parens": ["off", "always"],
+    "brace-style": ["error", "1tbs"],
     "capitalized-comments": "off",
     "class-methods-use-this": "error",
     "comma-dangle": "off",
@@ -124,10 +115,7 @@
     "curly": "error",
     "default-case": "error",
     "eol-last": "error",
-    "eqeqeq": [
-      "error",
-      "always"
-    ],
+    "eqeqeq": ["error", "always"],
     "guard-for-in": "error",
     "id-blacklist": [
       "error",
@@ -157,24 +145,15 @@
     "jsdoc/check-indentation": "error",
     "jsdoc/newline-after-description": "error",
     "jsdoc/no-types": "error",
-    "linebreak-style": [
-      "error",
-      "unix"
-    ],
-    "max-classes-per-file": [
-      "error",
-      5
-    ],
+    "linebreak-style": ["error", "unix"],
+    "max-classes-per-file": ["error", 5],
     "max-len": [
       "error",
       {
         "code": 120
       }
     ],
-    "max-lines": [
-      "error",
-      500
-    ],
+    "max-lines": ["error", 500],
     "new-parens": "error",
     "newline-per-chained-call": "off",
     "no-bitwise": "error",
@@ -240,10 +219,7 @@
       }
     ],
     "no-redeclare": "error",
-    "no-restricted-syntax": [
-      "error",
-      "ForInStatement"
-    ],
+    "no-restricted-syntax": ["error", "ForInStatement"],
     "no-return-await": "error",
     "no-sequences": "error",
     "no-sparse-arrays": "error",
@@ -257,10 +233,7 @@
     "no-useless-constructor": "error",
     "no-var": "error",
     "object-shorthand": "error",
-    "one-var": [
-      "error",
-      "never"
-    ],
+    "one-var": ["error", "never"],
     "padding-line-between-statements": [
       "error",
       {
@@ -273,10 +246,7 @@
     "prefer-const": "error",
     "prefer-object-spread": "error",
     "prefer-template": "error",
-    "quote-props": [
-      "error",
-      "as-needed"
-    ],
+    "quote-props": ["error", "as-needed"],
     "radix": "error",
     "react/jsx-curly-spacing": "off",
     "react/jsx-equals-spacing": "off",
@@ -289,17 +259,12 @@
     ],
     "react/jsx-wrap-multilines": "off",
     "space-before-function-paren": "off",
-    "space-in-parens": [
-      "off",
-      "never"
-    ],
+    "space-in-parens": ["off", "never"],
     "spaced-comment": [
       "error",
       "always",
       {
-        "markers": [
-          "/"
-        ]
+        "markers": ["/"]
       }
     ],
     "unicorn/filename-case": "error",
@@ -310,20 +275,8 @@
       "error",
       {
         "rules": {
-          "comment-type": [
-            true,
-            "doc",
-            "singleline",
-            "multiline"
-          ],
-          "completed-docs": [
-            true,
-            "enums",
-            "functions",
-            "methods",
-            "classes",
-            "namespaces"
-          ],
+          "comment-type": [true, "doc", "singleline", "multiline"],
+          "completed-docs": [true, "enums", "functions", "methods", "classes", "namespaces"],
           "encoding": true,
           "import-spacing": true,
           "invalid-void": true,
@@ -360,10 +313,7 @@
           "strict-comparisons": true,
           "strict-string-expressions": true,
           "strict-type-predicates": true,
-          "typedef": [
-            true,
-            "call-signature"
-          ],
+          "typedef": [true, "call-signature"],
           "unnecessary-else": true
         }
       }
