--- a/.prettierignore
+++ b/.prettierignore
@@ -1,13 +1,13 @@
 .cache
-.cache/**
-**/*.cache/**
 .git
-.modules
-misc
-.husky/_/husky.sh
 .gitmodules
+.husky/_/husky.sh
 .modules
-Dockerfile
+.modules
+.nyc_output
+**/*.cache/**
 **/Dockerfile
-venv
+build
+Dockerfile
 scripts/*.symlink.sh
+venv
