Update Taskfile.yml, package.json, common/.gitignore, common/.prettierignore files

--- a/common/.prettierignore
+++ b/common/.prettierignore
@@ -1,15 +1,14 @@
-.cache
-.git
+.cache/
+.git/
 .gitmodules
 .husky/_/husky.sh
-.modules
-.modules
-.nyc_output
-**/.cache
+.modules/
+.nyc_output/
+**/.cache/
 **/.husky/_/husky.sh
 **/Dockerfile
-build
+build/
 Dockerfile
 scripts/*.symlink.sh
-slim_test
-venv
+slim_test/
+venv/
