--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -77,10 +77,74 @@ tasks:
       - ./*.yml
     method: checksum
 
+  local-test:
+    desc: Run the Ansible play on the local machine
+    cmds:
+      - cp tests/inventory inventory
+      - if [ ! -f main.yml.bak ]; then mv main.yml main.yml.bak; fi
+      - cp tests/test.yml main.yml
+      - if [ ! -f ansible.cfg.bak ]; then mv ansible.cfg ansible.cfg.bak; fi
+      - cp tests/ansible.cfg ansible.cfg
+      - ansible-playbook --ask-sudo-pass main.yml
+
   markdown-link-check:
     desc: Scan markdown files for broken links
     cmds:
       - npm run misc:markdown-links
+
+  molecule-desktop:
+    desc: Provisions a desktop VirtualBox VM and then runs a Molecule test
+    summary: |
+      This task opens a VM with an operating system of your choosing and then tests
+      the project's play against it. It then leaves the VM open for inspection.
+
+      Example usage:
+      task molecule -- archlinux
+
+      Available scenarios:
+      archlinux, centos, debian, fedora, macos, ubuntu, windows
+    cmds:
+      - export OBJC_DISABLE_INITIALIZE_FORK_SAFETY=YES
+      - molecule converge -s {{.CLI_ARGS}}-desktop
+
+  molecule-docker:
+    desc: Performs a full test, including a test for idempotency, on all available Linux systems using Docker
+    summary: |
+      This task runs the project's Molecule tests using Docker. It only tests against 
+      Linux systems. If the role/project contains any steps that use the
+      community.general.snap plugin, then only the operating systems that support that
+      plugin with Docker are tested.
+
+      Example usage:
+      task molecule-docker
+    vars:
+      SNAP_REFS:
+        sh: grep -Ril \"community.general.snap:\" ./tasks
+    cmds:
+      - if [ "$SNAP_REFS" ]; then molecule test -s docker-snap; else molecule test -s docker; fi
+
+  molecule-e2e:
+    desc: Runs a full E2E Molecule test for all supported operating systems
+    summary: |
+      This task uses VirtualBox to run tests for all of our supported operating
+      systems in parallel. It is very RAM intensive so, if you want to run this,
+      your computer should have at least 32GB of RAM.
+
+      Run the full test:
+      task molecule-e2e
+
+      Generate the compatibility matrix in the README.md:
+      task molecule-e2e -- matrix
+    cmds:
+      - export OBJC_DISABLE_INITIALIZE_FORK_SAFETY=YES
+      - |
+        if [ "{{.CLI_ARGS}}" ]; then
+          if [ "{{.CLI_ARGS}}" == 'matrix']; then
+            PYCOLORS=0 molecule test > molecule-test-output.txt
+          fi
+        else
+          molecule test
+        fi
 
   prepare-release:
     desc: Ensure the project has upstream changes, lint, and then update the version
@@ -101,8 +165,13 @@ tasks:
       task shell -- ubuntu-21.04
 
       Available operating systems:
-      archlinux, centos-7, centos-8, 
-    
+      archlinux, centos-7, centos-8, debian-9, debian-10, fedora-33, fedora-34,
+      ubuntu-18.04, ubuntu-20.04, ubuntu-21.04
+    vars:
+      WORKDIR:
+        sh: basename $PWD
+    cmds:
+      - docker run --cap-drop=ALL -it -v ${PWD}:/{{WORKDIR}} -w /{{WORKDIR}} --rm megabytelabs/ansible-molecule-{{.CLI_ARGS}}:latest /bin/bash
 
   symlink-ansible-role:
     desc: Symlink all the roles in the roles folder to ~/.ansible/roles
@@ -117,6 +186,11 @@ tasks:
     sources:
       - roles/*/*/
     method: timestamp
+
+  update:
+    desc: Ensure the project is completely up-to-date and ready for development
+    cmds:
+      - cp ./.common/.start.sh .start.sh
 
   version:
     desc: Increment the version (use the prepare-release task instead)
