--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "@{{ npm_organization }}/{{ github_prefix }}{{ slug }}",
-  "description": "{{ description }}",
-  "license": "{{ license }}",
-  "author": "{{ author.name }} <{{ author.email }}> ({{ link.home }})",
-  "homepage": "{{ link.home }}",
+  "name": "@{{npm_organization}}/{{github_prefix}}{{slug}}",
+  "description": "{{description}}",
+  "license": "{{license}}",
+  "author": "{{author.name}} <{{author.email}}> ({{link.home}})",
+  "homepage": "{{link.home}}",
   "repository": {
     "type": "git",
-    "url": "git+{{ repo }}.git"
+    "url": "git+{{repo}}.git"
   },
   "bugs": {
-    "email": "{{ email.help }}",
-    "url": "{{ repo }}/-/issues"
+    "email": "{{email.help}}",
+    "url": "{{repo}}/-/issues"
   },
   "version": "0.0.1",
   "scripts": {
@@ -24,29 +24,6 @@
     "lint:prettier": "prettier --list-different .",
     "lint:shellcheck": "find . -type d \\( -name .cache -o -name .git -o -name .modules  -o -name node_modules -o -name .husky -o -name venv \\) -prune -o -type f \\( -name \\*.sh -o -name \\*.sh.j2 \\) -print0 | xargs -0 -r -n1 shellcheck",
     "misc:markdown-links": "find . -type d \\( -name .cache -o -name .git -o -name .github -o -name .gitlab -o -name .modules  -o -name node_modules \\) -prune -o -type f \\( -name \\*.md \\) -print0 | xargs -0 -r -n1 markdown-link-check",
-    "shell:archlinux": "docker run --cap-drop=ALL -it -v ${PWD}:/ANSIBLE_ROLE_NAME -w /ANSIBLE_ROLE_NAME --rm megabytelabs/ansible-molecule-archlinux:latest /bin/bash",
-    "shell:centos-7": "docker run --cap-drop=ALL -it -v ${PWD}:/ANSIBLE_ROLE_NAME -w /ANSIBLE_ROLE_NAME --rm megabytelabs/ansible-molecule-centos-7:latest /bin/bash",
-    "shell:centos-8": "docker run --cap-drop=ALL -it -v ${PWD}:/ANSIBLE_ROLE_NAME -w /ANSIBLE_ROLE_NAME --rm megabytelabs/ansible-molecule-centos-8:latest /bin/bash",
-    "shell:debian-9": "docker run --cap-drop=ALL -it -v ${PWD}:/ANSIBLE_ROLE_NAME -w /ANSIBLE_ROLE_NAME --rm megabytelabs/ansible-molecule-debian-9:latest /bin/bash",
-    "shell:debian-10": "docker run --cap-drop=ALL -it -v ${PWD}:/ANSIBLE_ROLE_NAME -w /ANSIBLE_ROLE_NAME --rm megabytelabs/ansible-molecule-debian-10:latest /bin/bash",
-    "shell:fedora-33": "docker run --cap-drop=ALL -it -v ${PWD}:/ANSIBLE_ROLE_NAME -w /ANSIBLE_ROLE_NAME --rm megabytelabs/ansible-molecule-fedora-33:latest /bin/bash",
-    "shell:fedora-34": "docker run --cap-drop=ALL -it -v ${PWD}:/ANSIBLE_ROLE_NAME -w /ANSIBLE_ROLE_NAME --rm megabytelabs/ansible-molecule-fedora-34:latest /bin/bash",
-    "shell:ubuntu-18.04": "docker run --cap-drop=ALL -it -v ${PWD}:/ANSIBLE_ROLE_NAME -w /ANSIBLE_ROLE_NAME --rm megabytelabs/ansible-molecule-ubuntu-18.04:latest /bin/bash",
-    "shell:ubuntu-20.04": "docker run --cap-drop=ALL -it -v ${PWD}:/ANSIBLE_ROLE_NAME -w /ANSIBLE_ROLE_NAME --rm megabytelabs/ansible-molecule-ubuntu-20.04:latest /bin/bash",
-    "shell:ubuntu-21.04": "docker run --cap-drop=ALL -it -v ${PWD}:/ANSIBLE_ROLE_NAME -w /ANSIBLE_ROLE_NAME --rm megabytelabs/ansible-molecule-ubuntu-21.04:latest /bin/bash",
-    "start": "run-s update",
-    "test": "molecule test",
-    "test:docker": "SNAP_REFERENCES=$(grep -Ril \"community.general.snap:\" ./tasks) && if [ \"$SNAP_REFERENCES\" ]; then molecule test -s docker-snap; else molecule test -s docker; fi",
-    "test:local": "ansible-playbook --ask-sudo-pass --connection=local tests/test.yml",
-    "test:report": "PYCOLORS=0 molecule test > molecule-test-output.txt",
-    "test:archlinux": "molecule converge -s archlinux-desktop",
-    "test:centos": "molecule converge -s centos-desktop",
-    "test:debian": "molecule converge -s debian-desktop",
-    "test:fedora": "molecule converge -s fedora-desktop",
-    "test:macos": "molecule converge -s macos-desktop",
-    "test:ubuntu": "molecule converge -s ubuntu-desktop",
-    "test:windows": "export OBJC_DISABLE_INITIALIZE_FORK_SAFETY=YES && molecule converge -s windows-desktop",
-    "update": "bash .start.sh && cp ./.modules/ansible/.start.sh .start.sh",
     "version": "standard-version --no-verify"
   },
   "config": {
@@ -55,14 +32,12 @@
     }
   },
   "devDependencies": {
-    "@megabytelabs/prettier-config-ansible": "^1.0.0",
-    "consola": "^2.15.3",
+    "{{prettier_config}}": "^1.0.0",
     "cspell": "^5.6.3",
     "cz-conventional-changelog": "^3.3.0",
     "husky": "^6.0.0",
     "lint-staged": "^11.0.0",
     "markdown-link-check": "^3.8.7",
-    "npm-run-all": "^4.1.5",
     "npm-scripts-info": "^0.3.9",
     "prettier": "^2.3.1",
     "prettier-package-json": "^2.6.0",
@@ -71,7 +46,7 @@
     "standard-version": "^9.3.0"
   },
   "keywords": [
-    "ANSIBLE_ROLE_NAME",
+    "{{slug}}",
     "ansible",
     "megabytelabs",
     "playbook",
@@ -91,51 +66,35 @@
   "funding": [
     {
       "type": "opencollective",
-      "url": "https://opencollective.com/megabytelabs"
+      "url": "{{profile_link.opencollective}}/{{profile.opencollective}}"
     },
     {
       "type": "patreon",
-      "url": "https://www.patreon.com/ProfessorManhattan"
+      "url": "{{profile_link.patreon}}/{{profile.patreon}}"
     }
   ],
   "lint-staged": {
-    "{**/*.yml,**/*.json}": [
+    "**/*.{js,json,md,ts,yml}": [
       "prettier --write"
     ],
-    "{**/*.sh,**/*.sh.j2": [
+    "**/*.{sh,sh.j2}": [
       "prettier --write",
-      "docker run -v \"$PWD:/mnt\" koalaman/shellcheck"
+      "docker run -v \"$PWD:/mnt\" megabytelabs/shellcheck"
     ],
     "package.json": [
       "prettier-package-json --write"
     ]
   },
-  "prettier": "@megabytelabs/prettier-config-ansible",
+  "prettier": "{{prettier_config}}",
   "scripts-info": {
-    "commit": "IMPORTANT: Whenever committing code run 'git-cz' or 'npm run commit' - this command will automatically test and prompt with an interactive questionnaire to populate proper commit messages",
-    "fix": "Automatically fix formatting errors",
-    "fix:black": "Automatically format Python files",
+    "commit": "Whenever committing code, run 'task commit' - 'task commit' will utilize this step and make your commits better",
     "fix:prettier": "Automatically format files with Prettier",
-    "fix:shellcheck": "Attempts to automatically fix shell scripts",
+    "fix:shellcheck": "Attempts to automatically fix shell scripts with Shellcheck",
     "info": "Displays descriptions of all the npm tasks",
-    "lint": "Report all linting errors",
-    "lint:ansible": "Runs ansible-lint which has rules specific to Ansible projects",
-    "lint:black": "Runs Black which formats Python files",
-    "lint:docker": "Runs hadolint on all Dockerfile and Dockerfile.j2 files",
-    "lint:flake8": "Runs flake8 which lints Python files",
-    "lint:hadolint": "Lints Dockerfiles",
     "lint:prettier": "Checks for presence of files that Prettier wants to format differently",
-    "lint:shellcheck": "Performs linting of shell scripts",
-    "lint:yaml": "Runs yamllint which is a general purpose linter for YAML files",
+    "lint:shellcheck": "Performs linting of shell scripts with Shellcheck",
     "misc:markdown-links": "Checks markdown files for broken links",
-    "misc:symlink-role": "Adds role to ~/.ansible/roles/professormanhattan.role_name - you can use this when ansible-lint complains about role not being found",
     "prepare-release": "Prepares the repository for a release",
-    "shell:OS_NAME": "Open a Docker shell session for debugging (OS_NAME can be archlinux, centos-7, centos-8, debian-9, debian-10, fedora-33, fedora-34, ubuntu-18.04, ubuntu-20.04, or ubuntu-21.04)",
-    "test": "Runs molecule tests for all the supported operating systems using VirtualBox (this is RAM intensive)",
-    "test:docker": "Runs molecule tests on all supported Linux environments using Docker (if the role contains a snap installation, then only flavors that support snap are tested)",
-    "test:local": "Installs the role on your local machine",
-    "test:OS_NAME": "Provisions a full desktop VirtualBox VM, installs the role(s), and does not delete the VM after testing for further inspection (OS NAME can be archlinux, centos, debian, fedora, macos, ubuntu, or windows)",
-    "update": "Runs .start.sh to automatically update meta files and documentation",
     "version": "Used by 'npm run prepare-release' to update the CHANGELOG"
   },
   "standard-version": {
