--- a/Taskfile-common.yml
+++ b/Taskfile-common.yml
@@ -1,3 +1,4 @@
+---
 version: '3'
 
 tasks:
@@ -56,7 +57,10 @@ tasks:
   lint-dockerfiles:
     desc: Lint Dockerfiles using Hadolint (requires Docker)
     cmds:
-      - find . -type d \\( -name .cache -o -name .common -o -name .git -o -name .modules  -o -name node_modules -o -name .husky -o -name .task -o -name test \\) -prune -o -type f \\( -name Dockerfile -o -name Dockerfile.j2 \\) -print0 | xargs -0 -r -n1 docker run -v ${PWD}:/work -w /work megabytelabs/hadolint:slim
+      - find . -type d \\( -name .cache -o -name .common -o -name .git -o -name .modules \
+        -o -name node_modules -o -name .husky -o -name .task -o -name test \\) -prune -o \
+        -type f \\( -name Dockerfile -o -name Dockerfile.j2 \\) -print0 | xargs -0 -r -n1 \
+        docker run -v ${PWD}:/work -w /work megabytelabs/hadolint:slim
     sources:
       - Dockerfile
       - Dockerfile.j2
