--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "postinstall": "if [ -d .git ]; then husky install; fi",
     "lint:prettier": "prettier --list-different .",
     "lint:shellcheck": "find . -type d \\( -name .cache -o -name .git -o -name .modules  -o -name node_modules -o -name .husky -o -name venv \\) -prune -o -type f \\( -name \\*.sh -o -name \\*.sh.j2 \\) -print0 | xargs -0 -r -n1 shellcheck",
-    "lint:staged": "lint-staged",
+    "lint-staged": "lint-staged",
     "misc:markdown-links": "find . -type d \\( -name .cache -o -name .git -o -name .github -o -name .gitlab -o -name .modules  -o -name node_modules \\) -prune -o -type f \\( -name \\*.md \\) -print0 | xargs -0 -r -n1 markdown-link-check",
     "version": "standard-version --no-verify"
   },
