Update package.json, requirements.txt files

--- a/package.json
+++ b/package.json
@@ -85,7 +85,7 @@
     ],
     "**/*.yml": [
       "check-yaml",
-      "yamllint"
+      "yamllint -s"
     ],
     "package.json": [
       "prettier-package-json --write"
