Fixed dependency reference.

--- a/taskfiles/Taskfile-lint.yml
+++ b/taskfiles/Taskfile-lint.yml
@@ -21,7 +21,7 @@ tasks:
 
   ansible:
     deps:
-      - :ansible:symlink
+      - :ansible:symlink:{{.REPOSITORY_SUBTYPE}}
       - :common:python:requirements
     desc: Lint Ansible projects using Ansible Lint
     summary: |
