Added ignore comment for yamllint.

--- a/taskfiles/ansible/Taskfile-test.yml
+++ b/taskfiles/ansible/Taskfile-test.yml
@@ -100,6 +100,7 @@ tasks:
       * ubuntu
       * windows
     env:
+      # yamllint disable-line rule:truthy
       OBJC_DISABLE_INITIALIZE_FORK_SAFETY: YES
     cmds:
       - task: test:molecule:virtualbox:converge:{{if .CLI_ARGS}}cli{{else}}prompt{{end}}
