--- a/taskfiles/Taskfile-install.yml
+++ b/taskfiles/Taskfile-install.yml
@@ -1,5 +1,5 @@
 ---
-version: '3'
+version: "3"
 
 tasks:
   install-doctor:
@@ -26,7 +26,7 @@ tasks:
     cmds:
       - task: npm:global
         vars:
-          NPM_PACKAGE: '@commitlint/cli'
+          NPM_PACKAGE: "@commitlint/cli"
           NPM_PACKAGE_BIN: commitlint
 
   npm:cspell:
@@ -40,7 +40,7 @@ tasks:
   npm:global:
     deps:
       - :install:software:node
-    label: 'install-{{.NPM_PACKAGE}}'
+    label: "install-{{.NPM_PACKAGE}}"
     cmds:
       - |
         if [ "${container:=}" != 'docker' ]; then
@@ -111,7 +111,7 @@ tasks:
     cmds:
       - task: npm:global
         vars:
-          NPM_PACKAGE: '@appnest/readme'
+          NPM_PACKAGE: "@appnest/readme"
           NPM_PACKAGE_BIN: readme
 
   npm:remark:
