Update deprecated/update.sh, deprecated/tslint.json, package.json.handlebars, taskfiles/Taskfile-fix.yml, taskfiles/Taskfile-install.yml, taskfiles/Taskfile-lint.yml, common/.eslintrc.js, files/.eslintrc.js, deprecated/scripts/software.sh, deprecated/scripts/log.sh, deprecated/scripts/common.sh, deprecated/scripts/notices.sh, .start.sh.handlebars, deprecated/scripts/ansible/vault.sh, deprecated/scripts/prompts/environment.js, deprecated/scripts/prompts/molecule-desktop.js, deprecated/scripts/prompts/shell.js, deprecated/scripts/prompts/vagrant-up.js files Deleted .remarkrc.js, Taskfile.yml, scripts/init.sh, scripts/npm-prepare.sh files

--- a/taskfiles/Taskfile-install.yml
+++ b/taskfiles/Taskfile-install.yml
@@ -37,6 +37,14 @@ tasks:
           NPM_PACKAGE: cspell
           NPM_PACKAGE_BIN: cspell
 
+  npm:eslint:
+    run: once
+    cmds:
+      - task: npm:global
+        vars:
+          NPM_PACKAGE: eslint
+          NPM_PACKAGE_BIN: eslint
+
   npm:global:
     deps:
       - :install:software:node
