--- a/taskfiles/Taskfile-fix.yml
+++ b/taskfiles/Taskfile-fix.yml
@@ -41,16 +41,13 @@ tasks:
       * `.vscode/`
       * `node_modules/`
       * `venv/`
-    vars:
-      TOP_KEYS:
-        sh: jq -r '.json_top_keys' .variables.json
     cmds:
       - task: json:{{if .CLI_ARGS}}cli{{else}}default{{end}}
 
   json:cli: find . -type d \( {{.IGNORE_FOLDERS}} \) -prune -o -type f \( -name '*.json' \) -print0 |
-    xargs -0 -r -n1 pretty-format-json --autofix{{if .TOP_KEYS}} --top-keys {{.TOP_KEYS}}{{end}}
+    xargs -0 -r -n1 eslint --fix
 
-  json:default: pretty-format-json --autofix{{if .TOP_KEYS}} --top-keys {{.TOP_KEYS}}{{end}} {{.CLI_ARGS}} || true
+  json:default: eslint --fix '**/*.json'
 
   misc:
     deps:
