--- a/taskfiles/Taskfile-fix.yml
+++ b/taskfiles/Taskfile-fix.yml
@@ -47,7 +47,7 @@ tasks:
   json:cli: find . -type d \( {{.IGNORE_FOLDERS}} \) -prune -o -type f \( -name '*.json' \) -print0 |
     xargs -0 -r -n1 eslint --fix
 
-  json:default: eslint --fix '**/*.json'
+  json:default: eslint --fix --ext json .
 
   misc:
     deps:
@@ -246,6 +246,26 @@ tasks:
     cmds:
       - find . -type d \( {{.IGNORE_FOLDERS}} \) -prune -o -type f \( -name '*.sh' -o -name '*.sh.j2' \)
         -print0 | xargs -0 shellcheck -f diff | git apply
+
+  yaml:
+    desc: Autofix YML files
+    summary: |
+      # Autofix YML files
+
+      This task will automatically apply updates to YML files. It currently performs the following
+      tasks:
+
+      1. Ensures the first line of the file is `---`
+      2. Sorts the file according to the layout specified by `.eslintrc.js`
+
+      **Example usage:**
+      `task fix:yaml`
+
+      **Example fixing single file:**
+      `task fix:yaml -- filename.yml`
+    cmds:
+      - task: yaml:dashes
+      - task: yaml:order
 
   yaml:dashes:
     summary: |
